--- a/CSS/basic.css
+++ b/CSS/basic.css
@@ -18,22 +18,42 @@ body{
 }
 h2{
     font-size: 20px;
+    @media(max-width: 360px){
+        font-size: 10px;
+        white-space: nowrap;
+    }
 }
 h3{
     font-size: 17px;
+    @media(max-width: 360px){
+        font-size: 9px;
+    }
 }
 h4{
-    font-size: 15px;;
+    font-size: 15px;
+    @media(max-width: 360px){
+        font-size: 8px;
+    }
 }
 h5{
     font-size: 14px;
+    @media(max-width: 360px){
+        font-size: 7px;
+    }
 }
 h6{
     font-size: 12px;
+    @media(max-width: 360px){
+        font-size: 6px;
+    }
 }
 p{
-    font-size: 10px;;
+    font-size: 10px;
+    @media(max-width: 360px){
+        font-size: 5px;
+    }
 }
+/*header*/
 .fixed{
     position: fixed;
     top: 0;
@@ -41,7 +61,6 @@ p{
     width: 100%;
     z-index: 1000;
 }
-
 .nav-header{
     display: flex;
     align-items: center;
@@ -51,24 +70,28 @@ p{
     padding-right: 30px;
     width: 100%;
     height: 59px;
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3), 0px 4px 8px 3px rgba(0, 0, 0, 0.15) !important;
-
+    box-shadow: 0px 1px 3px 0px #0000004D, 0px 4px 8px 3px #00000026;
+    @media(max-width: 360px){
+        height: 30px;
+    }
 }
 .nav-header h2{
     color: white;
     font-weight: 700;
-    height: 23px;
 }
 .header-r{
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 240px;
+    @media(max-width: 360px){
+        transform: scale(0.5);
+    }
 }
 .search-box{
     position: relative;
     width: 170px;
-    height: 25px;;
+    height: 25px;
 }
 .search-input{
     font-size: 15px;
@@ -91,18 +114,21 @@ p{
     cursor: pointer;
 }
 .btn-lan{
-    /* weight: 25px; */
-    font-size: 16px;
+    width: 25px;
     height: 25px;
     background-color: white;
     border: 0;
     color: black;
-    padding-right: 5px !important;
-    padding-left: 5px !important;
-    padding-top: 4px !important; 
-    padding-bottom: 3px !important;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-top: 4px;
+    padding-bottom: 3px;
     cursor: pointer;
     border-radius: 2px;
+    font-size: auto;
+    @media(max-width: 360px){
+        margin-right: 5px;
+    }
 }
 .nav-content{
     width: 100%;
@@ -115,8 +141,19 @@ p{
     padding-left: 115px;
     padding-top: 20px;
     padding-bottom: 10px;
+    @media(max-width: 360px){
+        height: 90px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /* 分成三等份 */
+        grid-gap: 10px; /* 設定格間間距 */
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, auto); /* 分成兩行，高度自動 */
+        padding-left: 30px;
+        padding-top: 0px;
+        padding-bottom: 0px;   
+    }
 }
-.btn-catalog{
+.btn-catalog {
     color: #FFFFFF;
     background-color: transparent;
     border: 0;
@@ -124,10 +161,10 @@ p{
     padding: 10px 20px;
     cursor: pointer;
     text-decoration: none;
-}
-.nav-header, .nav-content, .btn-catalog, .btn-lan{
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
+    @media(max-width: 360px){
+        padding-right: 0px;
+        padding-left: 0px;
+    }
 }
 .a-catalog{
     color: #FFFFFF;
@@ -138,10 +175,26 @@ p{
     cursor: pointer;
     text-decoration: none;
 }
+@media (max-width: 768px) {
+    .dropdown, .a-catalog {
+        white-space: nowrap;
+    }
+}
+@media (max-width: 360px) {
+    .dropdown, .a-catalog {
+        transform: scale(0.5);
+        white-space: nowrap;
+    }
+}
+.home-icon{
+    @media(max-width: 360px){
+        transform: scale(0.5);
+    }
+}
 .btn-catalog:hover {
     background-color: #505f75; 
 }
-.nav-content ul {
+ul {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -154,34 +207,35 @@ p{
     width: 200px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
 }
-.nav-content li > a {
+li > a {
     color: white;
     padding: 10px;
     text-decoration: none;
     display: block;
 }
-.nav-content li > a:hover {
+li > a:hover {
     background-color: #505f75;
 }
-.nav-content li:hover > ul {
+li:hover > ul {
     display: block;
 }
-.nav-content li {
+li {
     position: relative;
     list-style-type: none;
 }
-.nav-content li > a {
+li > a {
     padding: 10px 20px;
     font-size: 16px;
     background-color: transparent;
     display: block;
 }
-.nav-content li > a:hover {
+li > a:hover {
     background-color: #505f75;
 }
 
 
 
+/*footer*/
 .footer{
     width: 100%;
     height: 294px;
@@ -190,11 +244,24 @@ p{
     padding-left: 92px;
     padding-right: 92px;
     position: relative;
+    @media(max-width: 360px){
+        height: 580px;
+    }
 }
 .footer-top{
     display: flex;
     justify-content: space-between;
+    @media(max-width: 360px){
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-gap: 20px;
+    }
 }
+@media (max-width: 360px) {
+    .footer-top {
+      grid-template-columns: 1fr;
+    }
+  }
 .left h6, .middle1 h6, .middle2 h6, .right h6{
     margin-top: 0px;
     margin-bottom: 10px;
@@ -227,4 +294,8 @@ p{
     margin: 0;
     bottom: 17px;
     text-align: end;
+}
+.footer-a{
+    text-decoration: none;
+    color: black;
 }
