--- a/CSS/moreStory.css
+++ b/CSS/moreStory.css
@@ -205,6 +205,41 @@ i a{
         margin: 0;
         display: inline-block;
     }
+
+    .intro_hl1{
+    width: 697px;
+    height: 446px;
+    }
+
+    .intro_hl2{
+        width: 697px;
+        height: 427px;
+        margin-top: 50px;
+    }
+
+    .intro_hl3{
+        width: 697px;
+        height: 449px;
+        margin-top: 50px;
+    }
+    
+    .intro_hl_word1{
+        width: 697px;
+        height: 85px;
+        font-size: 16px;
+    }
+
+    .intro_hl_word2{
+        width: 697px;
+        height: 66px;
+        font-size: 16px;
+    }
+
+    .intro_hl_word3{
+        width: 697px;
+        height: 88px;
+        font-size: 16px;
+    }
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1220px){
@@ -306,6 +341,24 @@ i a{
         font-size: 16px;
         margin: 0;
         display: inline-block;
+    }
+
+    .intro_hl1{
+        width: 697px;
+        display: inline-block;
+        margin-top: 60px;
+        }
+    
+    .intro_hl2, .intro_hl3{
+        width: 697px;
+        display: inline-block;
+        margin-top: 50px;
+    }
+
+    .intro_hl_word1, .intro_hl_word2, .intro_hl_word3{
+        width: 697px;
+        display: inline-block;
+        font-size: 16px;
     }
 }
 
@@ -415,6 +468,24 @@ i a{
         min-height: 100vh; /* 確保父容器填滿視窗高度 */
         overflow: hidden;
     }
+
+    .intro_hl1{
+        width: 497px;
+        display: inline-block;
+        margin-top: 60px;
+        }
+    
+    .intro_hl2, .intro_hl3{
+        width: 497px;
+        display: inline-block;
+        margin-top: 50px;
+    }
+
+    .intro_hl_word1, .intro_hl_word2, .intro_hl_word3{
+        width: 497px;
+        display: inline-block;
+        font-size: 14px;
+    }
 }
 
 @media screen and (max-width: 767px){
@@ -449,7 +520,7 @@ i a{
 
     .area_main{
         width: 450px;
-        height: 1300px !important;
+        height: 1280px !important;
         /* min-height: 2016px; */
         /* display: inline-block; */
         background-color: #B9C1D2;
@@ -462,7 +533,7 @@ i a{
     
     .area_main2{
         width: 450px;
-        min-height: 1300px !important;
+        min-height: 1280px !important;
         background-color: #354567;
         color: #FFFFFF;
         border-radius:0 20px 20px 20px;
@@ -633,40 +704,8 @@ i a{
     opacity: 1;
 }
 
-.intro_hl1{
-    width: 697px;
-    height: 446px;
-}
 
-.intro_hl2{
-    width: 697px;
-    height: 427px;
-    margin-top: 50px;
-}
 
-.intro_hl3{
-    width: 697px;
-    height: 449px;
-    margin-top: 50px;
-}
-
-.intro_hl_word1{
-    width: 697px;
-    height: 85px;
-    font-size: 16px;
-}
-
-.intro_hl_word2{
-    width: 697px;
-    height: 66px;
-    font-size: 16px;
-}
-
-.intro_hl_word3{
-    width: 697px;
-    height: 88px;
-    font-size: 16px;
-}
 
 .area_tit{    
     width: auto;
@@ -708,6 +747,7 @@ i a{
 .img_source a{
     font-size: 14px;
     color: #8391AE;
+    margin-top: 2px;
 }
 
 .spacer {
@@ -740,7 +780,7 @@ i a{
     width: 144px;
 }
 
-#tit_hl1{
+/* #tit_hl1{
     width: 168px;
 }
 
@@ -754,7 +794,7 @@ i a{
 
 #tit_hl4{
     width: 240px;
-}
+} */
 
 #send2_tit{
     height: auto;
